# Anonymization-in-Time

./: .gitignore  AiT_Annotator.spec  BATCH_PROCESSING_GUIDE.md  LICENSE.txt  QUICKSTART.md  QUICK_START.md  README.md  TiT_Annotator.spec  annotation_viewer.py  batch_inference_sam3.py  batch_inference_sam3_hf.py  batch_inference_sam3_legacy.py  batch_inference_sam3_old.py  batch_inference_sam3_ultralytics.py  create_sample_data.py  device_utils.py  export_video.py  inspect_ocr_pipeline.py  inspect_sam3_pipeline.py  launcher.py  ocr.py  ocr_paddle.py  process_videos.py  pyproject.toml  requirements.txt  simple_ocr.py  start_ait.bat  start_tit.bat  transition_detection.py  utils.py  video_processor_gui.py
ait/: __init__.py  annotation_viewer.py  export_video.py  launcher.py  process_videos.py  transition_detection.py  utils.py  video_processor_gui.py
ait/ocr/: __init__.py  engine.py  name_matching.py  pipeline.py  stabilization.py
ait/segmentation/: __init__.py  circularize.py  engine.py  format.py  mask_ops.py  pipeline.py
ait/viewer/: __init__.py  main.py
ait/viewer/models/: __init__.py  annotation_manager.py  transition_manager.py
ait/viewer/ui/: __init__.py  canvas_widget_tk.py  main_window_tk.py
ait/viewer/utils/: mask_utils.py
docs/example/: test.json
ocr/: __init__.py  engine.py  format.py  name_matching.py  pipeline.py  stabilization.py
sam3/: __init__.py  circularize.py  engine.py  format.py  mask_ops.py  pipeline.py  tracking.py
src/: __init__.py  main.py
src/models/: annotation_manager.py
src/ui/: canvas_widget.py  canvas_widget_tk.py  main_window.py  main_window_tk.py
src/utils/: __init__.py  mask_utils.py  overlay_renderer.py  pickle_loader.py
tools/: inspect_ocr_pipeline.py  inspect_sam3_pipeline.py
